--- a/views/forum.twig
+++ b/views/forum.twig
@@ -10,23 +10,13 @@
                             {{ message }}
                         </div>
                     {% endfor %}
-                    <div class="col-lg-6 mb-3 mb-sm-0">
-                        <div class="dropdown bootstrap-select form-control form-control-lg bg-white bg-op-9 text-sm w-lg-50" style="width: 100%;">
-                            <select class="form-control form-control-lg bg-white bg-op-9 text-sm w-lg-50" data-toggle="select" tabindex="-98">
-                                <option> Categories </option>
-                                <option> Learn </option>
-                                <option> Share </option>
-                                <option> Build </option>
-                            </select>
-                        </div>
-                    </div>
                     <div class="col-lg-6 text-lg-right">
                         <div class="dropdown bootstrap-select form-control form-control-lg bg-white bg-op-9 ml-auto text-sm w-lg-50" style="width: 100%;">
+                            <h2>Filter By</h2>
                             <select class="form-control form-control-lg bg-white bg-op-9 ml-auto text-sm w-lg-50" data-toggle="select" tabindex="-98">
-                                <option> Filter by </option>
-                                <option> Votes </option>
-                                <option> Replys </option>
-                                <option> Views </option>
+                                <option> Date </option>
+                                <option> Region </option>
+                                <option> Name </option>
                             </select>
                         </div>
                     </div>
@@ -41,7 +31,7 @@
                                 </h5>
                                 <p class="text-md">{{ post.description }}</p>
                                 <p class="text-sm"><span class="op-6">Posted</span> at {{ post.formatted_date }} <span class="op-6"> by</span> {{ post.login }}</p>
-                                <div class="text-sm op-5"> #{{ post.name}} </div>
+                                <div class="text-sm op-5"> #{{ post.type}} </div>
                             </div>
                         </div>
                     </div>
@@ -52,8 +42,7 @@
             <div class="col-lg-3 mb-4 mb-lg-0 px-lg-0 mt-lg-0">
                 <div style="visibility: hidden; display: none; width: 285px; height: 801px; margin: 0px; float: none; position: static; inset: 85px auto auto;"></div><div data-settings="{&quot;parent&quot;:&quot;#content&quot;,&quot;mind&quot;:&quot;#header&quot;,&quot;top&quot;:10,&quot;breakpoint&quot;:992}" data-toggle="sticky" class="sticky" style="top: 85px;"><div class="sticky-inner">
                         {% if user.admin %}
-                            <a class="btn btn-lg btn-block btn-success rounded-0 py-4 mb-3 bg-op-6 roboto-bold" href="#">Pridat' Post</a>
-                        {% else %}
+                            <a class="btn btn-lg btn-block btn-success rounded-0 py-4 mb-3 bg-op-6 roboto-bold" href="/post/create">Pridat' Post</a>
                         {% endif %}
                         <div class="bg-white mb-3">
                             <h4 class="px-3 py-4 op-5 m-0">
@@ -63,14 +52,13 @@
                                 {% if  loop.index0 < 4%}
                             <div class="pos-relative px-3 py-3">
                                 <h6 class="text-primary text-sm">
-                                    <a href="#" class="text-primary">{{ post.title }} </a>
+                                    <a href="/post/{{ post.id }}" class="text-primary">{{ post.title }} </a>
                                 </h6>
                                 <p class="mb-0 text-sm"><span class="op-6">Posted</span> <span class="op-6"> by</span> {{ post.login }}</p>
                             </div>
                                 {% endif %}
                             {% endfor %}
                         </div>
-
                     </div>
                 </div>
             </div>
