--- a/views/post.twig
+++ b/views/post.twig
@@ -2,13 +2,57 @@
 
 {% block content %}
     <div class="container mt-5 mb-10">
+        {% if user.admin %}
         <div class="row">
-            <div class="col-lg-8">
+            <form action="" class="col">
+                <article>
+                    <header class="mb-4">
+                        <h1 class="fw-bolder mb-1">Title</h1>
+                        <input class="fs-1 form-control" type="text" name="title" value="{{ post.title }}">
+                        <p class="fs-5 mb-4">Type</p>
+                        <input class="fs-5 form-control" type="text" name="title" value="{{ post.type }}">
+                    </header>
+
+                    <!-- Post content-->
+                    <section class="mb-5">
+                        <p class="fs-5 mb-4 ">Text:</p>
+                        <textarea class="form-control" rows="8" type="text" name="text">{{ post.text }}</textarea>
+                    </section>
+                </article>
+                <div class="d-flex justify-content-between gap-1">
+                    <div class="card mb-4 w-50">
+                        <div class="card-header">Place</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <ul class="list-unstyled mb-0">
+                                        <li>Mesto: <select class="form-select" aria-label="Default select example">
+                                                {% for region in regions %}
+                                                    <option value="{{ region.id }}">{{ region.city }}</option>
+                                                {% endfor %}
+                                            </select></li>
+                                        <li>Adresa: <input class="form-control" type="text" name="address" value="{{ post.address }}"></li>
+                                        <li>Datum Konania: <input class="form-control" type="date" name="date_konania" value="{{post.date | date('YYYY-MM-DD')}}"></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-4 w-50">
+                        <div class="card-header">Description</div>
+                        <div class="card-body"><textarea class="form-control" rows="5" type="text" name="description">{{ post.description }}</textarea></div>
+                    </div>
+                </div>
+            </form>
+
+            {% else %}
+            <div class="col">
                 <article>
                     <header class="mb-4">
                         <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
                         <div class="text-muted fst-italic mb-2">{{ post.created_at }} by {{ post.login }}</div>
-                        <span class="badge bg-secondary text-decoration-none link-light">{{ post.name }}</span>
+                        <span class="badge bg-secondary text-decoration-none link-light">{{ post.type }}</span>
                     </header>
 
                     <!-- Post content-->
@@ -16,53 +60,53 @@
                         <p class="fs-5 mb-4 overflow-wrap-break-word">{{ post.text }}</p>
                     </section>
                 </article>
-                <!-- Comments section-->
-                <section class="mb-10">
-                    <div class="card bg-light">
+                <div class="d-flex justify-content-between gap-1">
+                    <div class="card mb-4 w-50">
+                        <div class="card-header">Place</div>
                         <div class="card-body">
-                            <!-- Comment form-->
-                            <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
-                                <button class="btn btn-lg btn-block btn-success rounded-0  my-3 bg-op-6 roboto-bold">Send</button></form>
-                            <!-- Comment with nested comments-->
-                            {% for comment in comments %}
-                            <div class="d-flex mb-4">
+                            <div class="row">
+                                <div class="col">
+                                    <ul class="list-unstyled mb-0">
+                                        <li>Mesto: {{ post.city }}</li>
+                                        <li>Adresa: {{ post.address }}</li>
+                                        <li>Datum Konania: {{ post.formatted_date }}</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-4 w-50">
+                        <div class="card-header">Description</div>
+                        <div class="card-body">{{post.description}}</div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+
+            <section class="mb-10">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <!-- Comment form-->
+                        <form action="/post/comment" method="post" class="mb-4"><textarea name="comment_text" class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
+                            <button type="submit" class="btn btn-lg btn-block btn-success rounded-0  my-3 bg-op-6 roboto-bold">Send</button></form>
+                        <!-- Comment with nested comments-->
+                        {% for comment in comments %}
+                            <div class="d-flex mb-4 justify-content-between">
                                 <!-- Parent comment-->
-
-
                                 <div class="ms-3">
-                                    <div class="fw-bold">{{ comment.commenter_name }}</div>
+                                    <div class="fw-bold fs-4">{% if comment.username %}{{ comment.username }} {% else%}niekto {% endif %}<span class="fs-5">{{ comment.formatted_date }}</span></div>
                                     {{ comment.comment_text }}
                                 </div>
-
+                                {% if user.admin %}
+                                    <a class="btn btn-lg btn-danger btn-error rounded-5 mb-3 bg-op-6 roboto-bold" href="/post/delete/{{ comment.id }}" class="btn-warning">Delete</a>
+                                {% endif %}
                             </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </section>
-            </div>
-            <!-- Side widgets-->
-            <div class="col-lg-4">
-                <!-- Categories widget-->
-                <div class="card mb-4">
-                    <div class="card-header">Place</div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col">
-                                <ul class="list-unstyled mb-0">
-                                    <li>Mesto: {{ post.city }}</li>
-                                    <li>Adresa: {{ post.address }}</li>
-                                    <li>Datum Konania: {{ post.formatted_date }}</li>
-                                </ul>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
+            </section>
 
-                <div class="card mb-4">
-                    <div class="card-header">Description</div>
-                    <div class="card-body">{{post.description}}</div>
-                </div>
-            </div>
         </div>
     </div>
 {% endblock %}
