--- a/views/registration.twig
+++ b/views/registration.twig
@@ -17,6 +17,9 @@
                         <div class="mb-3">
                             <input type="password" class="form-control" id="password" placeholder="password">
                         </div>
+                        <div class="mb-3">
+                            <input type="password" class="form-control" id="password1" placeholder="password repeat">
+                        </div>
                         <div class="text-center"><button type="submit" class="btn btn-dark px-5 mb-5 w-100">Registration</button></div>
                         <div id="emailHelp" class="form-text text-center mb-5 text-dark">Have an
                             Account? <a href="/login" class="text-dark fw-bold"> Login</a>
