--- a/views/forum.twig
+++ b/views/forum.twig
@@ -10,6 +10,12 @@
                             {{ message }}
                         </div>
                     {% endfor %}
+                    {% for message in messages %}
+                        <div class="alert alert-success" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+
                     <div class="col-lg-6 text-lg-right">
                         <div class="dropdown bootstrap-select form-control form-control-lg bg-white bg-op-9 ml-auto text-sm w-lg-50" style="width: 100%;">
                             <h2>Filter By</h2>
