--- a/views/base.twig
+++ b/views/base.twig
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
+    {% raw %}<script type ="text/javascript" src="/zoradenie.js"></script>{% endraw %}
 </head>
 <body>
 <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
@@ -22,9 +23,14 @@
                     <span class="px-2 ">{{ user.login }}</span> <a href="/user/logout" type="button" class="btn btn-dark">Odhlasit'</a>
                 </div>
             {% else %}
-            <div class="d-flex align-items-center">
-                <a href="/user/login" type="button" class="btn btn-dark">Prihlasit</a>
-            </div>
+                <div class="d-flex">
+                    <div class="d-flex align-items-center">
+                        <a href="/user/login" type="button" class="btn btn-dark">Prihlasit</a>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <a href="/user/registration" type="button" class="btn btn-dark">Registration</a>
+                    </div>
+                </div>
             {% endif %}
         </div>
     </nav>
