--- a/views/registration.twig
+++ b/views/registration.twig
@@ -5,25 +5,30 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card my-5">
-                    <form class="card-body cardbody-color p-lg-5">
+                    <form action="/user/registration" method="post" class="card-body cardbody-color p-lg-5">
                         <div class="text-center">
                             <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
                                  width="200px" alt="profile">
                         </div>
                         <div class="mb-3">
-                            <input type="text" class="form-control" id="Username" aria-describedby="emailHelp"
+                            <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp"
                                    placeholder="User Name">
                         </div>
                         <div class="mb-3">
-                            <input type="password" class="form-control" id="password" placeholder="password">
+                            <input type="password" class="form-control" id="password" name="pass1" placeholder="password">
                         </div>
                         <div class="mb-3">
-                            <input type="password" class="form-control" id="password1" placeholder="password repeat">
+                            <input type="password" class="form-control" id="password1" name="pass2" placeholder="password repeat">
                         </div>
                         <div class="text-center"><button type="submit" class="btn btn-dark px-5 mb-5 w-100">Registration</button></div>
                         <div id="emailHelp" class="form-text text-center mb-5 text-dark">Have an
-                            Account? <a href="/login" class="text-dark fw-bold"> Login</a>
+                            Account? <a href="/user/login" class="text-dark fw-bold"> Login</a>
                         </div>
+                        {% for message in errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
                     </form>
                 </div>
 
