--- a/views/post.twig
+++ b/views/post.twig
@@ -5,6 +5,11 @@
         {% if user.admin %}
         <div class="row">
             <form method="post" action="/post/update/{{ post.id }}" class="col">
+                {% for message in errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
                 <article>
                     <header class="mb-4">
                         <h1 class="fw-bolder mb-1">Title</h1>
@@ -13,7 +18,6 @@
                         <input class="fs-5 form-control" type="text" name="type" value="{{ post.type }}">
                     </header>
 
-                    <!-- Post content-->
                     <section class="mb-5">
                         <p class="fs-5 mb-4 ">Text:</p>
                         <textarea class="form-control" rows="8" type="text" name="text">{{ post.text }}</textarea>
